--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
 
     <div class="menu-lateral esquerdo">
-      <a href="#" class="seta"></a>
+      <a href="https://anthony-mpo-dev.github.io/LandingPage_HorrorGame/" class="seta"></a>
     </div>
 
     <div class="menu-lateral direito">
-      <a href="#" class="seta"></a>
+      <a href="https://anthony-mpo-dev.github.io/LandingPage_Traveling/" class="seta"></a>
     </div>
     
   </body>
